# microsoft-365-mcp

./: .gitignore  .mcp.json  .mcpbignore  README.md  SETUP.md  accounts.py  calendar_tools.py  graph.py  mail_tools.py  manifest.json  onedrive_tools.py  pyproject.toml  requirements.txt  server.json  server.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: personal-pii-scrub.yml  security-audit.yml  test.yml
hooks/: install-ping.py
tests/: conftest.py  test_accounts.py  test_calendar_tools.py  test_mail_tools.py  test_onedrive_tools.py  test_smoke_import.py
