[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-365-mcp"
version = "0.1.0"
description = "FastMCP server exposing Microsoft 365 (Outlook mail, Calendar, OneDrive) tools via Microsoft Graph."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "msal>=1.33.0",
    "keyring>=25.7.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

# Flat layout (modules at repo root). List them explicitly so the editable
# build is deterministic and setuptools does not fail discovery with
# "Multiple top-level modules discovered in a flat-layout".
[tool.setuptools]
py-modules = ["accounts", "calendar_tools", "graph", "mail_tools", "onedrive_tools", "server"]
